# unity-mcp

./: .gitignore  README-zh.md  README.md
.claude/prompts/: nl-gameobject-suite.md  nl-unity-suite-nl.md  nl-unity-suite-t.md
.github/workflows/: claude-gameobject-suite.yml  claude-nl-suite.yml  release.yml  unity-tests.yml
MCPForUnity/: package.json
Server/: README.md  pyproject.toml
Server/src/: main.py
Server/src/services/: custom_tool_service.py
Server/src/services/resources/: active_tool.py  custom_tools.py  editor_state.py  editor_state_v2.py  gameobject.py  layers.py  prefab_stage.py  project_info.py  selection.py  tags.py  unity_instances.py  windows.py
Server/src/services/state/: external_changes_scanner.py
Server/src/services/tools/: batch_execute.py  debug_request_context.py  execute_custom_tool.py  execute_menu_item.py  find_gameobjects.py  find_in_file.py  manage_asset.py  manage_components.py  manage_editor.py  manage_gameobject.py  manage_material.py  manage_prefabs.py  manage_scene.py  manage_script.py  manage_scriptable_object.py  manage_shader.py  manage_vfx.py  preflight.py  read_console.py  refresh_unity.py  run_tests.py  script_apply_edits.py  set_active_instance.py  test_jobs.py  utils.py
Server/src/transport/: plugin_hub.py  unity_instance_middleware.py  unity_transport.py
Server/src/transport/legacy/: unity_connection.py
Server/tests/integration/: conftest.py  test_edit_normalization_and_noop.py  test_edit_strict_and_warnings.py  test_editor_state_v2_contract.py  test_gameobject_resources.py  test_get_sha.py  test_manage_script_uri.py  test_manage_scriptable_object_tool.py  test_read_console_truncate.py  test_refresh_unity_retry_recovery.py  test_run_tests_busy_semantics.py  test_script_tools.py  test_test_jobs_async.py  test_validate_script_summary.py
docs/: README-DEV-zh.md  README-DEV.md
tools/: prepare_unity_asset_store_release.py
(+39 files in other folders)
